--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto 01</title>
   </head>
-  <body></body>
+  <body>
+    <p>teste</p>
+  </body>
 </html>
