add svg and img

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Projeto 01</title>
   </head>
   <body>
-    <p>teste </p>
+    <img src="./Assets/balls-decoration.svg" alt="">
   </body>
+
+  <footer></footer>
 </html>
