--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Projeto 01</title>
   </head>
   <body>
-    <img src="./Assets/balls-decoration.svg" alt="">
+    <img src="./Assets/balls-decoration.svg" alt="bolinhas pequenas que ficam em algum canto da tela">
   </body>
 
   <footer></footer>
