add div with img source

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
     <title>Projeto 01</title>
   </head>
   <body>
-    <img src="./Assets/balls-decoration.svg" alt="bolinhas pequenas que ficam em algum canto da tela">
+    <img
+      src="./Assets/balls-decoration.svg"
+      alt="bolinhas pequenas que ficam no canto inferior direito da tela"
+    />
+
+    <div id="hero">
+      <img
+        src="./Assets/image 1.jpg"
+        alt="Desenho de uma pessoa de pé, vestindo uma camisa laranja, calça azule sapato preto em uma sala com móveis"
+      />
+    </div>
   </body>
 
   <footer></footer>
