--- a/index.html
+++ b/index.html
@@ -17,14 +17,25 @@
       src="./Assets/balls-decoration.svg"
       alt="bolinhas pequenas que ficam no canto inferior direito da tela"
     />
-
     <div id="hero">
       <img
         src="./Assets/image 1.jpg"
         alt="Desenho de uma pessoa de pé, vestindo uma camisa laranja, calça azule sapato preto em uma sala com móveis"
       />
+      <h1>Ambientes únicos para você!</h1>
+      <p>
+        Nós criamos ambientes exclusivos e únicos, com muito bom gosto e
+        profissionalismo, investimos tempo e dedicação no seu projeto.
+      </p>
+      <p>
+        Tenha ambientes limpos e bem decorados, transmitindo elegância e finesse
+        para todos aqueles que estiverem ali.
+      </p>
+    </div>
+
+    <div id="footer">
+      <a href="https://instagram.com/_michaelwazowski"> Instagram </a>
+      <a href="mailto:contato@moveisparavoce.com"> Fale Conosco </a>
     </div>
   </body>
-
-  <footer></footer>
 </html>
