--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Oxygen+Mono&family=Saira+Condensed&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -13,23 +13,21 @@
     <title>Projeto 01</title>
   </head>
   <body>
-    <img
-      src="./Assets/balls-decoration.svg"
-      alt="bolinhas pequenas que ficam no canto inferior direito da tela"
-    />
     <div id="hero">
       <img
         src="./Assets/image 1.jpg"
         alt="Desenho de uma pessoa de pé, vestindo uma camisa laranja, calça azule sapato preto em uma sala com móveis"
       />
-      <h1>Ambientes únicos para você!</h1>
+      <h1>Ambientes <span>únicos</span> para você!</h1>
       <p>
-        Nós criamos ambientes exclusivos e únicos, com muito bom gosto e
-        profissionalismo, investimos tempo e dedicação no seu projeto.
+        Nós criamos ambientes <strong>exclusivos</strong> e
+        <strong>únicos</strong>, com muito bom gosto e profissionalismo,
+        investimos tempo e <span>dedicação no seu projeto.</span>
       </p>
       <p>
-        Tenha ambientes limpos e bem decorados, transmitindo elegância e finesse
-        para todos aqueles que estiverem ali.
+        Tenha <span>ambientes limpos</span> e bem decorados, transmitindo
+        <strong>elegância</strong> e <strong>finesse</strong> para todos aqueles
+        que estiverem ali.
       </p>
     </div>
 
@@ -37,5 +35,11 @@
       <a href="https://instagram.com/_michaelwazowski"> Instagram </a>
       <a href="mailto:contato@moveisparavoce.com"> Fale Conosco </a>
     </div>
+
+    <img
+      id="balls"
+      src="./Assets/balls-decoration.svg"
+      alt="bolinhas pequenas que ficam no canto inferior direito da tela"
+    />
   </body>
 </html>
