--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
     </div>
 
     <div id="footer">
-      <a href="https://instagram.com/_michaelwazowski"> Instagram </a>
-      <a href="mailto:contato@moveisparavoce.com"> Fale Conosco </a>
+      <div class="line"></div>
+
+      <a target="_blank" href="https://instagram.com/_michaelwazowski">
+        Instagram
+      </a>
+      <a target="_blank" href="mailto:contato@moveisparavoce.com">
+        Fale Conosco
+      </a>
+
+      <div class="line"></div>
     </div>
 
     <img
